AM-5 Added text input and switch button

--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-"prestart": "./node_modules/react-viro/bin/run_ngrok.sh",
+    "prestart": "./node_modules/react-viro/bin/run_ngrok.sh",
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.0.0",
+    "@ui-kitten/components": "^5.0.0",
     "react": "16.8.3",
     "react-native": "0.59.9",
-    "react-viro": "2.17.0"
+    "react-native-svg": "^9.13.6",
+    "react-viro": "2.17.0",
+    "toggle-switch-react-native": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
