--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@babel/core": "7.13.10",
     "@babel/runtime": "7.13.10",
     "babel-jest": "26.6.3",
-    "jest": "26.6.3",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.51.1",
     "react-test-renderer": "16.8.3"
   },
