--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-    "name": "AmadeusMobile",
-    "version": "0.0.1",
-    "private": true,
-    "scripts": {
-        "prestart": "./node_modules/react-viro/bin/run_ngrok.sh",
-        "start": "node node_modules/react-native/local-cli/cli.js start",
-        "test": "jest"
-    },
-    "dependencies": {
-        "@eva-design/eva": "^2.0.0",
-        "@ui-kitten/components": "^5.0.0",
-        "@ui-kitten/eva-icons": "^5.0.0",
-        "react": "16.8.3",
-        "react-native": "0.59.9",
-        "react-native-svg": "^9.13.6",
-        "react-viro": "2.17.0",
-        "toggle-switch-react-native": "^3.2.0"
-    },
-    "devDependencies": {
-        "@babel/core": "7.13.10",
-        "@babel/runtime": "7.13.10",
-        "babel-jest": "26.6.3",
-        "jest": "^26.6.3",
-        "metro-react-native-babel-preset": "0.51.1",
-        "react-test-renderer": "16.8.3"
-    },
-    "jest": {
-        "preset": "react-native"
-    }
+  "name": "AmadeusMobile",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "prestart": "./node_modules/react-viro/bin/run_ngrok.sh",
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
+  },
+  "dependencies": {
+    "@eva-design/eva": "^2.0.0",
+    "@ui-kitten/components": "^5.0.0",
+    "@ui-kitten/eva-icons": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "http": "*",
+    "http-request": "^0.7.0",
+    "mongoose": "^5.12.5",
+    "node-wit": "^6.0.1",
+    "react": "16.8.3",
+    "react-native": "0.59.9",
+    "react-native-svg": "^9.13.6",
+    "react-viro": "2.17.0",
+    "toggle-switch-react-native": "^3.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "7.13.10",
+    "@babel/runtime": "7.13.10",
+    "babel-jest": "26.6.3",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "0.51.1",
+    "react-test-renderer": "16.8.3"
+  },
+  "jest": {
+    "preset": "react-native"
+  }
 }
