AM-25 Added Sign Up Screen

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "prestart": "./node_modules/react-viro/bin/run_ngrok.sh",
+
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
@@ -26,5 +26,12 @@
   },
   "jest": {
     "preset": "react-native"
-  }
+  },
+
+  "rnpm": {
+    "assets": [
+      "./js/res/fonts"
+  ]
+}
+  
 }
