--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "assets": [
       "./js/res/fonts"
     ]
- },
+  },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
     "@ui-kitten/components": "^5.0.0",
+    "axios": "^0.21.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-svg": "^9.13.6",
