--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@eva-design/eva": "^2.0.0",
     "@ui-kitten/components": "^5.0.0",
     "@ui-kitten/eva-icons": "^5.1.0",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "fs": "*",
+    "graceful-fs": "^4.2.6",
     "http": "*",
     "http-request": "^0.7.0",
     "mongoose": "^5.12.5",
@@ -22,7 +25,9 @@
     "react-native": "0.59.9",
     "react-native-svg": "^9.13.6",
     "react-viro": "2.17.0",
-    "toggle-switch-react-native": "^3.2.0"
+    "readline": "^1.3.0",
+    "toggle-switch-react-native": "^3.2.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
