--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
   },
   "dependencies": {
     "@eva-design/eva": "^2.0.0",
     "@ui-kitten/components": "^5.0.0",
+    "axios": "^0.21.1",
     "react": "16.8.3",
     "react-native": "0.59.9",
     "react-native-svg": "^9.13.6",
@@ -27,11 +27,9 @@
   "jest": {
     "preset": "react-native"
   },
-
   "rnpm": {
     "assets": [
       "./js/res/fonts"
-  ]
-}
-  
+    ]
+  }
 }
