--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
         "react": "16.8.3",
         "react-native": "0.59.9",
         "react-native-svg": "^9.13.6",
+        "react-redux": "^7.2.4",
         "react-viro": "2.17.0",
         "readline": "^1.3.0",
+        "redux": "^4.1.0",
         "toggle-switch-react-native": "^3.2.0",
         "url": "^0.11.0"
     },
